# rseam

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  test.sh
.beads/: metadata.json
design/: API_COVERAGE.md  COMPLETE_API_COVERAGE.md  ENDPOINT_TEST_MATRIX.md  IMPLEMENTATION_ROADMAP.md  PHASE_1_DEVICES.md  PHASE_2_FUTURE.md  README.md
skill/: SKILL.md
src/: api_client.rs  cli.rs  error.rs  help_agent.rs  main.rs  types.rs
src/commands/: access_codes.rs  connect_webviews.rs  devices.rs  health.rs  locks.rs  mod.rs
