[package]
name = "rseam"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "rseam"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
dotenv = "0.15"
